--- a/Assignment1Threads/Assignment1Threads/Assignment1Threads.csproj
+++ b/Assignment1Threads/Assignment1Threads/Assignment1Threads.csproj
@@ -52,6 +52,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadDisplay.cs" />
+    <Compile Include="ThreadMnger.cs" />
+    <Compile Include="ThreadMusic.cs" />
+    <Compile Include="ThreadTriangle.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
